<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/purpleb"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"/>

    <TextView
        android:id="@+id/logoName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_italic"
        android:text="Hello There, Welcome Back"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_italic"
        android:textColor="@color/white"
        android:text="Sign In to continue"
        android:textSize="15sp"
        android:transitionName="slogan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_italic"
            android:textColorHint="@color/white"
            android:transitionName="username"
            android:id="@+id/username"
            android:hint="Username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya_italic"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="Password"
            android:fontFamily="@font/alegreya_italic"
            android:textColorHint="@color/white"
            android:transitionName="password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:fontFamily="@font/alegreya_italic"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/peachbutton"
            android:fontFamily="@font/alegreya_italic"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:transitionName="main"
            android:text="Sign In"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:backgroundTint="@color/peachbutton"
            android:fontFamily="@font/alegreya_italic"
            android:text="New User ? Signup"
            android:textColor="@color/white"
            android:transitionName="sub"/>
    </LinearLayout>

</LinearLayout>