...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- ViewPager -->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="619dp"
            android:layout_weight="1"
            android:background="@color/purpleb" />

        <!-- Bottom NavigationView -->
...
