<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purpleb"
    android:padding="20dp"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/logoName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:transitionName="logo_text"
        android:fontFamily="@font/alegreya_italic"
        android:text="Welcome"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/alegreya_italic"
        android:text="SignUp to Plan Your Events"
        android:textSize="15sp"
        android:transitionName="slogan" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/white"
            android:id="@+id/username"
            app:counterMaxLength="15"
            android:fontFamily="@font/alegreya_italic"
            android:hint="Username"
            android:transitionName="username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:textColorHint="@color/white"
            android:fontFamily="@font/alegreya_italic"
            android:hint="Password"
            android:transitionName="password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repassword"
            android:textColorHint="@color/white"
            android:fontFamily="@font/alegreya_italic"
            android:hint="Confirm Password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:fontFamily="@font/alegreya_italic"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_italic"
            android:backgroundTint="@color/peachbutton"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:transitionName="main"
            android:text="Sign Up"/>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_italic"
            android:layout_gravity="right"
            android:backgroundTint="@color/peachbutton"
            android:textColor="@color/white"
            android:transitionName="sub"
            android:textSize="10sp"
            android:text="Already have an account? SignIn now"/>
    </LinearLayout>

</LinearLayout>